--- a/Jenkins/Dockerfile
+++ b/Jenkins/Dockerfile
@@ -1,11 +1,18 @@
 FROM jenkins/jenkins:lts
 
 USER root
-RUN apt-get update \
-      && apt-get install -y
 
-RUN echo "jenkins ALL=NOPASSWD: ALL" >> /etc/sudoers
+RUN apt-get update -qq \
+    && apt-get install -qqy apt-transport-https ca-certificates curl gnupg2 software-properties-common 
+RUN curl -fsSL https://download.docker.com/linux/debian/gpg | apt-key add -
+RUN add-apt-repository \
+   "deb [arch=amd64] https://download.docker.com/linux/debian \
+   $(lsb_release -cs) \
+   stable"
+RUN apt-get update  -qq \
+    && apt-get install docker-ce=5:18.09.4~3-0~debian-stretch -y
+RUN usermod -aG docker jenkins
 
 USER jenkins
 COPY plugins.txt /usr/share/jenkins/plugins.txt
-RUN /usr/local/bin/plugins.sh /usr/share/jenkins/plugins.txt
+RUN /usr/local/bin/install-plugins.sh < /usr/share/jenkins/plugins.txt
